# doc2skill

./: .gitignore  LICENSE  README.md
project/: .env.example  README.md  SKILL.md  pyproject.toml
project/examples/: fine_tune.py  multimodal.py  zero_shot.py
project/project/output/spatialfusion_skill/project/: .env.example
project/project/output/spatialfusion_skill/project/examples/: discover_and_generate.py  package_validation.py
project/project/output/spatialfusion_skill/project/src/docskill_factory/: __init__.py
project/project/output/spatialfusion_skill/project/tests/: test_runtime.py  test_spec.py
project/src/novae_skill/: __init__.py  cli.py  diagnostics.py  renderer.py  runtime.py  spec.py
project/tests/: llm_api_test.ipynb  notebook_tests.ipynb  test_cli.py  test_runtime.py  test_spec.py  validation_workflow.ipynb
